1rst Working model of the context

--- a/AutoPlanning.ipynb
+++ b/AutoPlanning.ipynb
@@ -2,23 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported type for timedelta seconds component: datetime.datetime",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-ebb7e389a24c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    110\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 111\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-9-ebb7e389a24c>\u001b[0m in \u001b[0;36mmain\u001b[0;34m(args)\u001b[0m\n\u001b[1;32m    105\u001b[0m                             \u001b[0mdateEnd\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2018\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m31\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m23\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m59\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m59\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m                             \u001b[0msteps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnbMachines\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 107\u001b[0;31m                             nbObstacles=2, nbOfGroups=5, nbTasksInGroup=6, ratioCompatMachines=.5)\n\u001b[0m\u001b[1;32m    108\u001b[0m     \u001b[0;31m#planning = map(MACHINES, [])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-9-ebb7e389a24c>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, dateStart, dateEnd, steps, nbMachines, nbObstacles, nbOfGroups, nbTasksInGroup, ratioCompatMachines, machines, obstacles, tasks)\u001b[0m\n\u001b[1;32m     91\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplanificationStart\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdateStart\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplanificationEnd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdateEnd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplanificationDuration\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimedelta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdateStart\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdateEnd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     94\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgridSteps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msteps\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimeGrains\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplanificationEnd\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplanificationStart\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtotal_seconds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msteps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported type for timedelta seconds component: datetime.datetime"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "An attempt to implement automatic planning with CNNs\n",
@@ -26,8 +12,15 @@
     "\n",
     "import random   # To generate random numbers\n",
     "import datetime # To manipulate dates\n",
-    "import copy     # To copy list of objects\n",
-    "\n",
+    "import copy     # To copy list of objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Task:\n",
     "    ''' Models a basic Task/Operation. \"startDate\" and \"machine\" get affected during automatic planning '''\n",
     "    def __init__(self, name, parentSimulation, machine, dateStart, dateEnd,\n",
@@ -42,22 +35,48 @@
     "        self.ofGroup=ofGroup\n",
     "        self.nbOp=nbOp\n",
     "        self.compatibleMachines=compatibleMachines\n",
-    "    def __str__():\n",
-    "        return(\"[\"+name+\"(\"+str(ofGroup)+\":\"+str(nbOp)+\")\"+\"@\"+machine+\": \"+str(dateStart)+\"->\"+str(dateEnd)+\"]\")\n",
+    "    def __str__(self):\n",
+    "        return(\"[\"+self.name+\"(\"+str(self.ofGroup)+\":\"+str(self.nbOp)+\")\"+\"@\"+str(self.machine)+\": \"+str(self.dateStart)+\"->\"+str(self.dateEnd)+\"]\")\n",
     "    def computeDateEnd():\n",
     "        ## TODO: check if parentSimu contains an obstacle \n",
-    "        dateEnd = dateStart+theoreticalDuration\n",
-    "        \n",
+    "        dateEnd = dateStart+theoreticalDuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Planification:\n",
     "    ''' Models a solution to the planification problem '''\n",
-    "    def __init__(parentSimulation, tasks):\n",
+    "    def __init__(self, parentSimulation, tasks):\n",
     "        self.parentSimulation=parentSimulation\n",
     "        self.tasks=tasks\n",
-    "    def __str__():\n",
-    "        return(str(tasks))\n",
-    "        \n",
+    "    def __str__(self):\n",
+    "        return(\", \".join(map(str,self.tasks)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Simulation:\n",
     "    ''' Models the whole problem: configuration+generation '''\n",
+    "\n",
+    "    class Config:\n",
+    "        def __init__(self, dateStart, dateEnd, steps, nbMachines, nbObstacles, nbOfGroups, nbTasksInGroup, ratioCompatMachines):\n",
+    "            self.planificationStart = dateStart\n",
+    "            self.planificationEnd = dateEnd\n",
+    "            self.planificationDuration = dateEnd - dateStart\n",
+    "            self.gridSteps = steps\n",
+    "            self.nbMachines = nbMachines\n",
+    "            self.nbObstacles = nbObstacles\n",
+    "            self.nbOfGroups = nbOfGroups\n",
+    "            self.nbTasksInGroup = nbTasksInGroup\n",
+    "            self.ratioCompatMachines = ratioCompatMachines\n",
     "    \n",
     "    @staticmethod\n",
     "    def randomDate(sTime, eTime):\n",
@@ -69,76 +88,90 @@
     " \n",
     "    @staticmethod\n",
     "    def randomMachine(machines):\n",
-    "        return machines[random.random()*len(machines)]\n",
+    "        return machines[int(random.random()*len(machines))]\n",
     "\n",
     "    @staticmethod\n",
     "    def randomMachines(machines, nb):\n",
     "        return random.sample(machines, nb)\n",
-    "    \n",
-    "    def generateProblem():\n",
-    "        if (len(machines)!=0):\n",
-    "            self.machines = machines\n",
-    "        else:\n",
-    "            self.machines = [ \"Machine\"+str(i) for i in range(0, nbMachines) ]\n",
-    "        if (len(obstacles)!=0):\n",
-    "            self.obstacles = obstacles\n",
-    "        else:\n",
-    "            for o in range(0, nbObstacles):\n",
-    "                start = Simulation.randomDate(self.planificationStart)\n",
-    "                duration = Simulation.randomDuration(self.planificationDuration/3)\n",
-    "                machine = Simulation.randomMachine(self.machines)\n",
-    "                currTask = Task(name=\"Obstacle\"+str(o), parentSimulation=None, machine=machine,\n",
-    "                                dateStart=start, dateEnd=start+duration, theoreticalDuration=duration,\n",
-    "                                stopDate=None, ofGroup=None, nbOp=None, compatibleMachines=[machine])\n",
-    "                self.obstacles += currTask\n",
-    "        if (len(tasks)!=0):\n",
-    "            self.tasks = tasks\n",
-    "        else:\n",
-    "            for g in range(0, nbOfGroups):\n",
-    "                stopDate = Simulation.randomDate(self.planificationStart, self.planificationEnd)\n",
-    "                for t in range(0, nbTasksInGroup):\n",
-    "                    currTask = Task(name=\"Task\"+str(i), parentSimulation=self, machine=None,\n",
-    "                                    dateStart=None, dateEnd=None, theoreticalDuration=Simulation.randomDuration(self.planificationDuration/3),\n",
-    "                                    stopDate=stopDate, ofGroup=g, noOp=t, compatibleMachines=randomMachines(machines, ratioCompatMachines*len(machines)))\n",
-    "                    self.tasks += currTask\n",
-    "        print(\"Generated a problem of \"+str(nbOfGroups*nbTasksInGroup)+\" Tasks:\"+str(self.tasks))\n",
-    "        problem = Planification(self, copy.deepcopy(self.tasks))\n",
-    "        print(str(problem))\n",
-    "        return(problem)\n",
     "\n",
+    "    def initTimeGrains(self):\n",
+    "        self.timeGrains = range(0, int((self.config.planificationDuration).total_seconds()), self.config.gridSteps)\n",
+    "\n",
+    "    def initMachines(self):\n",
+    "        if (self.machines == None):\n",
+    "            self.machines = [ \"Machine\"+str(i) for i in range(0, self.config.nbMachines) ]\n",
+    "    \n",
+    "    def initObstacles(self):\n",
+    "        if (self.obstacles == None):\n",
+    "            self.obstacles = []\n",
+    "            for o in range(0, self.config.nbObstacles):\n",
+    "                start    = Simulation.randomDate(self.config.planificationStart, self.config.planificationEnd)\n",
+    "                duration = Simulation.randomDuration(self.config.planificationDuration/3)\n",
+    "                machine  = Simulation.randomMachine(self.machines)\n",
+    "                currTask = Task(name=\"Obstacle\"+str(o), parentSimulation=None, machine=machine,\n",
+    "                                dateStart=start, dateEnd=start+duration,\n",
+    "                                theoreticalDuration=duration,\n",
+    "                                stopDate=None, ofGroup=None, nbOp=None,\n",
+    "                                compatibleMachines=[machine])\n",
+    "                self.obstacles.append(currTask)\n",
+    "\n",
+    "    def initTasks(self):\n",
+    "        if (self.tasks == None):\n",
+    "            self.tasks = []\n",
+    "            for g in range(0, self.config.nbOfGroups):\n",
+    "                stopDate = Simulation.randomDate(self.config.planificationStart, self.config.planificationEnd)\n",
+    "                for t in range(0, self.config.nbTasksInGroup):\n",
+    "                    currTask = Task(name=\"Task\"+str(t), parentSimulation=self, machine=None,\n",
+    "                                    dateStart=None, dateEnd=None, \n",
+    "                                    theoreticalDuration=Simulation.randomDuration(self.config.planificationDuration/3),\n",
+    "                                    stopDate=stopDate, ofGroup=g, nbOp=t,\n",
+    "                                    compatibleMachines=Simulation.randomMachines(self.machines, int(self.config.ratioCompatMachines*len(self.machines))))\n",
+    "                    self.tasks.append(currTask)\n",
+    "\n",
+    "    def initPlanification(self):\n",
+    "        self.problem = Planification(self, copy.deepcopy(self.tasks))\n",
+    "        \n",
     "    def __init__(self, dateStart, dateEnd, steps,\n",
     "                 nbMachines, nbObstacles, nbOfGroups, nbTasksInGroup, ratioCompatMachines,\n",
-    "                 machines=[], obstacles=[], tasks=[]):\n",
-    "        ''' if machines/obstacles/tasks are not provided/empty => they wil be generated '''\n",
-    "        self.planificationStart = dateStart\n",
-    "        self.planificationEnd = dateEnd\n",
-    "        self.planificationDuration = datetime.timedelta(dateStart, dateEnd)\n",
-    "        self.gridSteps = steps\n",
-    "        self.timeGrains = range(0, (self.planificationEnd-self.planificationStart).total_seconds(), steps)\n",
-    "        self.nbMachines = nbMachines\n",
-    "        self.nbObstacles = nbObstacles\n",
-    "        self.nbOfGroups = nbOfGroups\n",
-    "        self.nbTasksInGroup = nbTasksInGroup\n",
-    "        self.ratioCompatMachines = ratioCompatMachines       \n",
-    "        self.problem = generateProblem()\n",
-    "        \n",
+    "                 machines=None, obstacles=None, tasks=None):\n",
+    "        ''' if machines/obstacles/tasks are not provided/empty => they will be generated '''\n",
+    "        self.config    = Simulation.Config(dateStart, dateEnd, steps, nbMachines, nbObstacles, nbOfGroups, nbTasksInGroup, ratioCompatMachines)\n",
+    "        self.machines  = machines  ## Eventually null\n",
+    "        self.obstacles = obstacles ## Eventually null\n",
+    "        self.tasks     = tasks     ## Eventually null\n",
+    "        self.initTimeGrains()    \n",
+    "        self.initMachines()\n",
+    "        self.initObstacles()\n",
+    "        self.initTasks()\n",
+    "        self.initPlanification()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-77-976ea89472f5>, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-77-976ea89472f5>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    if __name__ == \"__main__\":\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
     "def main(args):\n",
     "    simulation = Simulation(dateStart=datetime.datetime(2018,8,1,0,0,0),\n",
     "                            dateEnd=datetime.datetime(2018,8,31,23,59,59),\n",
     "                            steps=3000, nbMachines=6,\n",
     "                            nbObstacles=2, nbOfGroups=5, nbTasksInGroup=6, ratioCompatMachines=.5)\n",
-    "    #planning = map(MACHINES, [])\n",
+    "    print(\"Generated a problem of \"+str(simulation.config.nbOfGroups*simulation.config.nbTasksInGroup)+\" Tasks:\")\n",
+    "    print(str(simulation.problem))\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main(None)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
