Adding comment on what to implement

--- a/AutoPlanning.ipynb
+++ b/AutoPlanning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,15 +148,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-77-976ea89472f5>, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-77-976ea89472f5>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    if __name__ == \"__main__\":\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated a problem of 30 Tasks:\n",
+      "[Task0(0:0)@None: None->None], [Task1(0:1)@None: None->None], [Task2(0:2)@None: None->None], [Task3(0:3)@None: None->None], [Task4(0:4)@None: None->None], [Task5(0:5)@None: None->None], [Task0(1:0)@None: None->None], [Task1(1:1)@None: None->None], [Task2(1:2)@None: None->None], [Task3(1:3)@None: None->None], [Task4(1:4)@None: None->None], [Task5(1:5)@None: None->None], [Task0(2:0)@None: None->None], [Task1(2:1)@None: None->None], [Task2(2:2)@None: None->None], [Task3(2:3)@None: None->None], [Task4(2:4)@None: None->None], [Task5(2:5)@None: None->None], [Task0(3:0)@None: None->None], [Task1(3:1)@None: None->None], [Task2(3:2)@None: None->None], [Task3(3:3)@None: None->None], [Task4(3:4)@None: None->None], [Task5(3:5)@None: None->None], [Task0(4:0)@None: None->None], [Task1(4:1)@None: None->None], [Task2(4:2)@None: None->None], [Task3(4:3)@None: None->None], [Task4(4:4)@None: None->None], [Task5(4:5)@None: None->None]\n"
      ]
     }
    ],
@@ -169,9 +169,38 @@
     "    print(\"Generated a problem of \"+str(simulation.config.nbOfGroups*simulation.config.nbTasksInGroup)+\" Tasks:\")\n",
     "    print(str(simulation.problem))\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
+    "if (__name__ == \"__main__\"):\n",
     "    main(None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO1: test rules: force-planning, precedence, JIT/ASAP, resources\n",
+    "# TODO2: DeepLearning ala AlphaGo: 1 DNN-WhereToPlace + 1 DNN-FitnessToExpect+ Reinforcement learning as game"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -197,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
